[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "midi_tokenizers"
version = "0.0.1"
authors = [
  { name="Wojciech Matejuk", email="wmatejuk14@gmail.com" },
  { name = "algrtm", email = "office@algrtm.com" }
]
description = "Package with MIDI tokenizers and quantizers."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "datasets~=2.17.1",
  "fortepyan>=0.2.8",
  "numpy~=1.26.3",
  "pandas~=2.1.4",
  "PyYAML~=6.0.1",
]
[project.urls]
Homepage = "https://github.com/Nospoko/midi-quantizers"

[tool.setuptools]
packages = [
"quantizers",
"object_generators",
"midi_tokenizers",
"midi_trainable_tokenizers",
"artifacts",
]
