[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "midi_tokenizers"
version = "3.0"
authors = [
  { name="Wojciech Matejuk", email="wmatejuk14@gmail.com" },
  { name = "EPR Labs", email = "tomek@epr-labs.com" }
]
description = "Package with MIDI tokenizers and quantizers."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "datasets~=2.17.1",
  "tokenizers>=0.15.2",
  "fortepyan>=0.4.2",
  "numpy~=1.26.3",
  "pandas~=2.1.4",
  "PyYAML~=6.0.1",
]
[project.urls]
Homepage = "https://github.com/Nospoko/midi-tokenizers"

[tool.setuptools.packages.find]
include = ["midi_tokenizers*"]
